# cookiecutter-pypackage

./: LICENSE  README.rst  cookiecutter.json
{{cookiecutter.project_slug}}/: Makefile  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst
